# AppShop

./: .gitignore  AppButton.qml  CMakeLists.txt  LICENSE  README.md  about.ui  form.ui  main.cpp  main.h  main.py  main.qml
apps/: ls
apps/Graphics/: ls
lang/: en_US.ts
